# WeeklyAssignment8

./: README.md
weeklyassignment8/: .gitignore  pyproject.toml
weeklyassignment8/dockerfiles/: Dockerfile  docker-compose.yml
weeklyassignment8/ml_deployment/: README.md  classification_application.py  streamlit.py
weeklyassignment8/ml_deployment/Datafiles/: model_dt.pkl  model_gb.pkl  model_lr.pkl  model_lr_gridsearch.pkl  model_nb.pkl  model_svc.pkl  modelgridsearch_svc.pkl  scaler.pkl
weeklyassignment8/ml_deployment/config/v1/: __init__.py  database_config.py
weeklyassignment8/ml_deployment/model/: mobile_classification_model.py  mongo_data1.py
weeklyassignment8/ml_deployment/utils/: filesloader.py  singleton.py
weeklyassignment8/ml_deployment/utils/v1/: preprocessing_utils.py
weeklyassignment8/notebook/: mobile_price_classifcation.ipynb  mobile_price_eda.ipynb  model_dt.pkl  model_gb.pkl  model_lr.pkl  model_nb.pkl  model_svc.pkl  scaler.pkl
