[tool.poetry]
name = "weeklyassignment8"
version = "0.1.0"
description = ""
authors = ["sahilsinghavisoft <sahil.singh@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
scikit-learn = "^1.4.2"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
mongoengine = "^0.28.2"
black = "^24.4.0"






[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
